apps/jellyfin/resources/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Jellyfin"
    gethomepage.dev/group: "Applications"
    gethomepage.dev/icon: "jellyfin"
    gethomepage.dev/description: "Media Server"
    gethomepage.dev/href: "https://media.cyphers.app"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`media.cyphers.app`)
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: authentik-auth
          namespace: authentik
      services:
        - name: jellyfin
          namespace: jellyfin
          port: 8096
  tls:
    secretName: production-cyphers-app-tls
